Made popup look nicer

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,11 @@
-<style>
-  button {
-    width: 200px;
-    height: 40px;
-  }
-</style>
-<p>Rember to press f11 to go full screen!</p>
-<button id="toggleBingeMode">toggle binge mode</button>
-<script src="popup.js"></script>
+<html>
+  <head>
+    <link rel="stylesheet" href="popup.css" />
+  </head>
+  <body>
+    <p>Remember to press F11 to go full screen!</p>
+    <button id="toggleBingeMode">toggle binge mode</button>
+    <p>Binge mode is <span id="mode">off</span>!</p>
+    <script src="popup.js"></script>
+  </body>
+</html>
